--- a/Dockerfile.common
+++ b/Dockerfile.common
@@ -1,12 +1,18 @@
+ARG NODE_VERSION=12
+
 FROM ruby:2.7.2
+
+COPY os/02nocache /etc/apt/apt.conf.d/02nocache
+COPY os/01_nodoc /etc/dpkg/dpkg.cfg.d/01_nodoc
 
 RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | (OUT=$(apt-key add - 2>&1) || echo $OUT) \
     && echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list \
+    && curl -fsSL https://deb.nodesource.com/setup_$NODE_VERSION.x | bash - \
     && export DEBIAN_FRONTEND=noninteractive \
     && apt-key adv --refresh-keys --keyserver keyserver.ubuntu.com \
     && apt-get update \
     && apt-get -y dist-upgrade --no-install-recommends \
-    && apt-get -y install \
+    && apt-get -y install --no-install-recommends \
         poppler-utils \
         libvips-tools \
         libvips-dev \
@@ -56,6 +62,8 @@ RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | (OUT=$(apt-key add - 2>&
         gridsite-clients \
         geoip-database \
         libgirepository1.0-dev \
-    && apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/*
+        nodejs \
+    && apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/* && rm -rf /var/cache/apt/archives \
+    && rm -rf /usr/share/doc/ && rm -rf /usr/share/man/ && rm -rf /usr/share/locale/
 
 EXPOSE 3000
