--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,14 +1,10 @@
 FROM gabrieletassoni/thecore-common:latest
 
-RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | (OUT=$(apt-key add - 2>&1) || echo $OUT) \
-    && echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list \
-    && export DEBIAN_FRONTEND=noninteractive \
+RUN export DEBIAN_FRONTEND=noninteractive \
     && apt-key adv --refresh-keys --keyserver keyserver.ubuntu.com \
-    && apt-get update && apt-get -y install \
+    && apt-get update && apt-get -y install --no-install-recommends \
         git-flow \
         graphviz \
-    # Update
-    && apt-get -y dist-upgrade --no-install-recommends \
     # Clean up
     && apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/*
 
