--- a/Dockerfile.common
+++ b/Dockerfile.common
@@ -1,18 +1,22 @@
-ARG NODE_VERSION=12
-
 FROM ruby:2.7.2
 
 COPY os/02nocache /etc/apt/apt.conf.d/02nocache
 COPY os/01_nodoc /etc/dpkg/dpkg.cfg.d/01_nodoc
 
-RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | (OUT=$(apt-key add - 2>&1) || echo $OUT) \
-    && echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list \
-    && curl -fsSL https://deb.nodesource.com/setup_$NODE_VERSION.x | bash - \
-    && export DEBIAN_FRONTEND=noninteractive \
+RUN export DEBIAN_FRONTEND=noninteractive \
     && apt-key adv --refresh-keys --keyserver keyserver.ubuntu.com \
     && apt-get update \
-    && apt-get -y dist-upgrade --no-install-recommends \
-    && apt-get -y install --no-install-recommends \
+    && apt-get -y dist-upgrade --no-install-recommends
+
+RUN curl -sL https://deb.nodesource.com/setup_16.x | bash - \
+    && apt-get install -y nodejs
+
+# RUN curl -sL https://dl.yarnpkg.com/debian/pubkey.gpg | gpg --dearmor | tee /usr/share/keyrings/yarnkey.gpg >/dev/null \
+#     && echo "deb [signed-by=/usr/share/keyrings/yarnkey.gpg] https://dl.yarnpkg.com/debian stable main" | tee /etc/apt/sources.list.d/yarn.list 
+
+RUN npm install --global yarn
+
+RUN apt-get -y install --no-install-recommends \
         poppler-utils \
         libvips-tools \
         libvips-dev \
@@ -22,8 +26,6 @@ RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | (OUT=$(apt-key add - 2>&
         build-essential \
         freetds-dev \
         libcups2-dev \
-        yarn \
-        sudo \
         apt-utils \
         git \
         openssh-client \
@@ -62,7 +64,6 @@ RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | (OUT=$(apt-key add - 2>&
         gridsite-clients \
         geoip-database \
         libgirepository1.0-dev \
-        nodejs \
     && apt-get autoremove -y && apt-get clean -y \
     && rm -rf /var/lib/apt/lists/* && rm -rf /var/cache/apt/archives \
     && rm -rf /usr/share/doc/ && rm -rf /usr/share/man/ && rm -rf /usr/share/locale/
