--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "@rails/ujs": "^6.1.0",
     "@rails/webpacker": "5.4.2",
     "jquery": "^3.6.0",
+    "node-sass": "^7.0.1",
     "selectize": "^0.12.6",
     "trix": "^1.2.0",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^4.7.4"
   }
 }
