--- a/Dockerfile.deploy
+++ b/Dockerfile.deploy
@@ -1,6 +1,6 @@
-FROM gabrieletassoni/thecore-common:latest
+FROM gabrieletassoni/thecore-common:2
 
-RUN mkdir -p /app/vendor
+RUN mkdir -p /app/vendor/bundle
 COPY Gemfile /app/Gemfile
 COPY package.json /app/package.json
 WORKDIR /app
@@ -11,10 +11,11 @@ RUN gem install bundler \
     && bundle config set without development test \
     && bundle config build.nokogiri --use-system-libraries \
     && bundle install --jobs=8 \
+    && bundle config set path /app/vendor/bundle \
     && yarn install --check-files \
     && yarn cache clean
 
 # Add the entrypoints
 RUN mkdir /bin/thecore
-COPY entrypoint*.sh /bin/thecore/
+COPY docker/entrypoint*.sh /bin/thecore/
 RUN chmod +x /bin/thecore/entrypoint*.sh
