--- a/Dockerfile.common
+++ b/Dockerfile.common
@@ -1,4 +1,4 @@
-FROM ruby:2.7.2
+FROM ruby:2.7.5-bullseye
 
 COPY os/02nocache /etc/apt/apt.conf.d/02nocache
 COPY os/01_nodoc /etc/dpkg/dpkg.cfg.d/01_nodoc
