--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -3,6 +3,7 @@ FROM gabrieletassoni/thecore-common:2
 RUN export DEBIAN_FRONTEND=noninteractive \
     && apt-key adv --refresh-keys --keyserver keyserver.ubuntu.com \
     && apt-get update && apt-get -y install --no-install-recommends \
+        docker-compose \
         git-flow \
         graphviz \
     # Clean up
