--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,7 +1,8 @@
 FROM gabrieletassoni/thecore-common:2
 
 RUN export DEBIAN_FRONTEND=noninteractive \
-    && apt-key adv --refresh-keys --keyserver keyserver.ubuntu.com \
+    && curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg \
+    && chmod o+r /usr/share/keyrings/docker-archive-keyring.gpg \
     && apt-get update && apt-get -y install --no-install-recommends \
         docker-compose \
         git-flow \
