--- a/localdockerbuild/docker-compose.yml
+++ b/localdockerbuild/docker-compose.yml
@@ -1,9 +1,9 @@
 version: "3.7"
 
-networks:
-    default:
-      external:
-        name: development
+# networks:
+#     default:
+#       external:
+#         name: development
 
 x-common-vars: &commmon-vars
     RAILS_ENV: "${RAILS_ENV:-production}"
