--- a/localdockerbuild/.env
+++ b/localdockerbuild/.env
@@ -5,7 +5,7 @@ LANG=en_US.UTF-8
 RAILS_SERVE_STATIC_FILES="true"
 RAILS_RELATIVE_URL_ROOT="/"
 SECRET_KEY_BASE=dh37rbf4c7clbry320b5y3t854y9tc4938nyrnl9
-DATABASE_URL=postgres://postgres:dev@postgresql/mytrack?pool=5
+DATABASE_URL=postgres://postgres:postgres@db/backend?pool=5
 REDIS_URL=redis://redis
 SMTP_DELIVERY_METHOD=smtp
 SMTP_ADDRESS=changeme@example.com
