--- a/localdockerbuild/docker-compose.yml
+++ b/localdockerbuild/docker-compose.yml
@@ -13,7 +13,7 @@ x-common-vars: &commmon-vars
     RAILS_SERVE_STATIC_FILES: "${RAILS_SERVE_STATIC_FILES:-true}"
     RAILS_RELATIVE_URL_ROOT: "${RAILS_RELATIVE_URL_ROOT:-/}"
     SECRET_KEY_BASE: "${SECRET_KEY_BASE:-dh37rbf4c7clbry320b4y3t854y9tc4938nyrnl9}"
-    DATABASE_URL: "${DATABASE_URL:-postgres://postgres:dev@postgresql/ies?pool=5}"
+    DATABASE_URL: "${DATABASE_URL:-postgres://postgres:postgres@db/backend?pool=5}"
     REDIS_URL: "${REDIS_URL:-redis://redis}"
     SMTP_DELIVERY_METHOD: "${SMTP_DELIVERY_METHOD:-smtp}"
     SMTP_ADDRESS: "${SMTP_ADDRESS:-changeme@example.com}"
@@ -23,38 +23,51 @@ x-common-vars: &commmon-vars
     COMPOSE_PROJECT_NAME: "${COMPOSE_PROJECT_NAME}"
 
 services:
-    backend:
-        build:
-          dockerfile: /etc/thecore/docker/Dockerfile
-          context: /workspaces/project/app/.
-        restart: always
-        external_links:
-        - postgresql
-        - redis
-        entrypoint: /bin/thecore/entrypoint.sh
-        environment: 
-            <<: *commmon-vars
-        healthcheck:
-            test: "${DOCKER_HEALTHCHECK_TEST:-curl --fail http://localhost:3000/}"
-            interval: "60s"
-            timeout: "3s"
-            retries: 3
-    backend-sidekiq:
-        build:
-          dockerfile: /etc/thecore/docker/Dockerfile
-          context: /workspaces/project/app/.
-        restart: always
-        external_links:
-        - postgresql
-        - redis
-        depends_on:
-        - backend
-        entrypoint: /bin/thecore/entrypoint-sidekiq.sh
-        environment: 
-            <<: *commmon-vars
-        healthcheck:
-            test: "${DOCKER_HEALTHCHECK_TEST:-sidekiqmon|grep $(hostname)}"
-            interval: "60s"
-            timeout: "3s"
-            retries: 3
+  db:
+    image: postgres:latest
+    restart: unless-stopped
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_DB: postgres
+      POSTGRES_PASSWORD: postgres
 
+  redis:
+    image: redis:latest
+    entrypoint: "redis-server --appendonly yes"
+    restart: unless-stopped
+
+  backend:
+    build:
+      dockerfile: /etc/thecore/docker/Dockerfile
+      context: /workspaces/project/app/.
+    restart: unless-stopped
+    external_links:
+    - postgresql
+    - redis
+    entrypoint: /bin/thecore/entrypoint.sh
+    environment: 
+        <<: *commmon-vars
+    healthcheck:
+        test: "${DOCKER_HEALTHCHECK_TEST:-curl --fail http://localhost:3000/}"
+        interval: "60s"
+        timeout: "3s"
+        retries: 3
+
+  backend-sidekiq:
+    build:
+      dockerfile: /etc/thecore/docker/Dockerfile
+      context: /workspaces/project/app/.
+    restart: unless-stopped
+    external_links:
+    - postgresql
+    - redis
+    depends_on:
+    - backend
+    entrypoint: /bin/thecore/entrypoint-sidekiq.sh
+    environment: 
+        <<: *commmon-vars
+    healthcheck:
+        test: "${DOCKER_HEALTHCHECK_TEST:-sidekiqmon|grep $(hostname)}"
+        interval: "60s"
+        timeout: "3s"
+        retries: 3
