More fixes for gitlab pipeline deploy

--- a/docker/docker-compose.build.yml
+++ b/docker/docker-compose.build.yml
@@ -4,10 +4,6 @@ services:
   backend:
     build: 
       dockerfile: /etc/thecore/docker/Dockerfile
-      context: /workspaces/project/app/.
+      context: ${BUILD_DIR}
 
-  backend-sidekiq:
-    build: 
-      dockerfile: /etc/thecore/docker/Dockerfile
-      context: /workspaces/project/app/.
       
