--- a/Dockerfile.common
+++ b/Dockerfile.common
@@ -3,6 +3,10 @@ FROM ruby:2.7.5-bullseye
 COPY os/02nocache /etc/apt/apt.conf.d/02nocache
 COPY os/01_nodoc /etc/dpkg/dpkg.cfg.d/01_nodoc
 
+# Add to the container thecore specific scripts
+COPY scripts/ /usr/bin/
+COPY docker /etc/thecore/docker
+
 RUN export DEBIAN_FRONTEND=noninteractive \
     && curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg \
     && chmod o+r /usr/share/keyrings/docker-archive-keyring.gpg \
