--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,27 +1,27 @@
 FROM gabrieletassoni/thecore-common:2
 
+RUN echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/debian $(lsb_release -cs) stable" > /etc/apt/sources.list.d/docker.list
+
 RUN export DEBIAN_FRONTEND=noninteractive \
     && apt-get update && apt-get -y install --no-install-recommends \
+        docker-ce-cli \
         docker-compose \
         git-flow \
         graphviz \
     # Clean up
-    && apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/*
+    && apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/* \
+    && which docker \
+    && docker-compose version
 
 # Add at least a version of rails to work with
 RUN gem install rails -v '~> 6.1.0'
 
-# Add to the container thecore specific scripts
 RUN mkdir -p /etc/thecore/templates /etc/thecore/repos.conf.d
-
-COPY scripts/ /usr/bin/
 COPY bin/increment_version.sh /usr/bin/increment_version.sh
 COPY templates /etc/thecore/templates
 COPY thor_definitions/ /etc/thecore/
 COPY repos /etc/thecore/repos.conf.d
-COPY docker /etc/thecore/docker
 COPY localdockerbuild /etc/thecore/localdockerbuild
-
 # Creating the git clones of thecore gems.
 # Useful to have them already inside the dev environment if the need to customize them arises.
 # Otherwise the gem installed ones will suffice to the needs of thecore development.
