--- a/localdockerbuild/.env
+++ b/localdockerbuild/.env
@@ -1,15 +1,15 @@
-RAILS_ENV=production
-RACK_ENV=production
-RAILS_LOG_TO_STDOUT="true"
-LANG=en_US.UTF-8
-RAILS_SERVE_STATIC_FILES="true"
-RAILS_RELATIVE_URL_ROOT="/"
-SECRET_KEY_BASE=dh37rbf4c7clbry320b5y3t854y9tc4938nyrnl9
-DATABASE_URL=postgres://postgres:postgres@db/postgres?pool=5
-REDIS_URL=redis://redis
-SMTP_DELIVERY_METHOD=smtp
-SMTP_ADDRESS=changeme@example.com
-SMTP_USERNAME=changeme@example.com
-SMTP_PASSWORD=changeme
+SECRET_KEY_BASE=devtest
+ADMIN_PASSWORD=changeme
+APP_NAME=Thecore App
 COMPOSE_PROJECT_NAME=backenddev
+BASE_DOMAIN=alchemic.it
+FE_SUBDOMAIN=frontend
+BE_SUBDOMAIN=backend
+LETSENCRYPT_EMAIL=it@alchemic.it
+LANG=en_US.UTF-8
+SMTP_DELIVERY_METHOD=smtp
+SMTP_ADDRESS=it@alchemic.it
+SMTP_USERNAME=it@alchemic.it
+SMTP_PASSWORD=changeme
+
 IMAGE_TAG_BACKEND=backenddev
