add export for BUILD_DIR

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,8 +3,6 @@ FROM gabrieletassoni/thecore:2
 # Copy the Rails Appplication leaving out the .dockrignored file
 ADD . /app
 
-#forward request and error logs to docker log collector
-RUN ln -sf /dev/stdout /app/log/latest-startup.log \
-    && ln -sf /dev/stderr /app/log/latest-startup.log
+RUN ls -l /app/
 
 SHELL ["/bin/bash", "-c"]
