--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -35,6 +35,7 @@ x-vars: &vars
   SMTP_DELIVERY_METHOD: ${SMTP_DELIVERY_METHOD}
   SMTP_PASSWORD: ${SMTP_PASSWORD}
   SMTP_USERNAME: ${SMTP_USERNAME}
+  BUILD_DIR: ${BUILD_DIR}
 
 services: 
   db:
