--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,9 @@
 FROM gabrieletassoni/thecore:2
 
+ARG BUILD_DIR
+
 # Copy the Rails Appplication leaving out the .dockrignored file
-ADD . /app
+ADD $BUILD_DIR/. /app
 
 RUN ls -l /app/
 
