Debug localdocker compile

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,9 +1,7 @@
 FROM gabrieletassoni/thecore:2
 
-ARG BUILD_DIR
-
 # Copy the Rails Appplication leaving out the .dockrignored file
-ADD $BUILD_DIR/. /app
+ADD . /app
 
 RUN ls -l /app/
 
