--- a/docker/docker-compose.build.yml
+++ b/docker/docker-compose.build.yml
@@ -1,5 +1,7 @@
 version: "3.7"
 
-services: 
+services:
   backend:
-    build: .
+    build:
+      context: ${CI_PROJECT_DIR}
+      dockerfile: /etc/thecore/docker/Dockerfile
