--- a/localdockerbuild/docker-compose.build.yml
+++ b/localdockerbuild/docker-compose.build.yml
@@ -4,4 +4,4 @@ services:
   backend:
     build:
       dockerfile: /etc/thecore/docker/Dockerfile
-      context: /workspaces/project/app/.
+      context: ${CI_PROJECT_DIR}
