Use .env variables for all derived vars

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -21,10 +21,10 @@ x-vars: &vars
   ADMIN_PASSWORD: ${ADMIN_PASSWORD}
   BE_SUBDOMAIN: ${BE_SUBDOMAIN}
   BACKEND_DOMAIN: ${BE_SUBDOMAIN}.${BASE_DOMAIN}
-  BACKEND_URL: https://${BACKEND_DOMAIN}
+  BACKEND_URL: https://${BE_SUBDOMAIN}.${BASE_DOMAIN}
   FE_SUBDOMAIN: ${FE_SUBDOMAIN}
   FRONTEND_DOMAIN: ${FE_SUBDOMAIN}.${BASE_DOMAIN}
-  FRONTEND_URL: https://${FRONTEND_DOMAIN}
+  FRONTEND_URL: https://${FE_SUBDOMAIN}.${BASE_DOMAIN}
   COMPOSE_PROJECT_NAME: ${COMPOSE_PROJECT_NAME}
   DEFAULT_OUTGOING_EMAIL_DOMAIN: ${BASE_DOMAIN}
   DEFAULT_SENDER_EMAIL: mailer@${BASE_DOMAIN}
