--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,6 +3,6 @@ FROM gabrieletassoni/thecore:2
 # Copy the Rails Appplication leaving out the .dockrignored file
 ADD . /app
 
-RUN ls -l /app/
+RUN ls -l /app/vendor/bundle/ruby/*/gems/
 
 SHELL ["/bin/bash", "-c"]
