--- a/Dockerfile.common
+++ b/Dockerfile.common
@@ -20,6 +20,7 @@ RUN curl -sL https://deb.nodesource.com/setup_16.x | bash - \
 RUN npm install --global yarn
 
 RUN apt-get -y install --no-install-recommends \
+        iputils-ping \
         poppler-utils \
         libvips-tools \
         libvips-dev \
