Add docker-compose to devcontainer

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,41 +1,25 @@
 {
 	"name": "Thecore Dev",
-	"dockerFile": "Dockerfile",
-	"runArgs": ["--init"],
-	"mounts": [ "source=/var/run/docker.sock,target=/var/run/docker-host.sock,type=bind" ],
+	"dockerComposeFile": "docker-compose.yml",
+	"service": "app",
+	"workspaceFolder": "/workspaces/thecore_devcontainer/",
+
+	"initializeCommand": "mkdir -p ~/.docker && touch ~/.docker/config.json",
 	
-	// Use this environment variable if you need to bind mount your local source code into a new container.
-	"remoteEnv": {
-		"LOCAL_WORKSPACE_FOLDER": "${localWorkspaceFolder}"
-	},
-
-	// Set *default* container specific settings.json values on container create.
-	"settings": { 
-		"terminal.integrated.shell.linux": "/bin/bash"
-	},
-
-	// Add the IDs of extensions you want installed when the container is created.
-	"extensions": [
-		"ms-azuretools.vscode-docker",
-		"misogi.ruby-rubocop",
-		"rogalmic.bash-debug",
-		"shakram02.bash-beautify",
-		"foxundermoon.shell-format",
-		"timonwong.shellcheck"
-	],
-	"build": {
-		"args": {
-			"UPGRADE_PACKAGES": "true"
+	"customizations": {
+		// Configure properties specific to VS Code.
+		"vscode": {
+			// Add the IDs of extensions you want installed when the container is created.
+			"extensions": [
+				"ms-azuretools.vscode-docker",
+				"misogi.ruby-rubocop",
+				"rogalmic.bash-debug",
+				"shakram02.bash-beautify",
+				"foxundermoon.shell-format",
+				"timonwong.shellcheck"
+			],
 		}
 	},
 	
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
-
-	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "docker --version",
-
-	// Uncomment the next two lines to connect as a non-root user. See https://aka.ms/vscode-remote/containers/non-root.
-	"overrideCommand": false,
 	"remoteUser": "vscode"
 }
