--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,11 +1,12 @@
 FROM gabrieletassoni/thecore-common:2
 
-RUN echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/debian $(lsb_release -cs) stable" > /etc/apt/sources.list.d/docker.list
+RUN echo \
+  "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/debian \
+  $(lsb_release -cs) stable" > /etc/apt/sources.list.d/docker.list
 
 RUN export DEBIAN_FRONTEND=noninteractive \
     && apt-get update && apt-get -y install --no-install-recommends \
-        docker-ce-cli \
-        docker-compose \
+        docker-ce docker-ce-cli containerd.io docker-compose-plugin \
         git-flow \
         graphviz \
         python3-pip \
@@ -15,6 +16,7 @@ RUN export DEBIAN_FRONTEND=noninteractive \
     && docker-compose version \
     && python3 -m pip install semgrep
 
+RUN usermod -aG docker node
 # Add at least a version of rails to work with
 RUN gem install rails -v '~> 6.1.0'
 
