--- a/Dockerfile.deploy
+++ b/Dockerfile.deploy
@@ -1,11 +1,9 @@
-FROM gabrieletassoni/thecore-common:2
+ARG THECORE_VERSION
+FROM gabrieletassoni/thecore-common:${THECORE_VERSION}
 
 USER root
 
 RUN mkdir -p /app/vendor/bundle
-# These are useless since /app will be COPY . /app target, to be pruned if no error arises.
-# COPY Gemfile /app/Gemfile
-# COPY package.json /app/package.json
 WORKDIR /app
 
 # Install Rails dependecies
@@ -13,12 +11,6 @@ RUN gem install bundler \
     && bundle config set without development test \
     && bundle config build.nokogiri --use-system-libraries \
     && bundle config set path /app/vendor/bundle 
-    # These are useless since /app will be COPY . /app target, to be pruned if no error arises.
-    # \
-    # && bundle install --jobs=8 \
-    # && ls -l /app/vendor/bundle/ruby/*/gems/ \
-    # && yarn install --check-files \
-    # && yarn cache clean
 
 # Add the entrypoints
 RUN mkdir -p /bin/thecore
