--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,4 +1,5 @@
-FROM gabrieletassoni/thecore-common:2
+ARG THECORE_VERSION
+FROM gabrieletassoni/thecore-common:${THECORE_VERSION}
 
 # Install base packages and latest debian keyrings
 RUN export DEBIAN_FRONTEND=noninteractive \
@@ -30,7 +31,7 @@ RUN export DEBIAN_FRONTEND=noninteractive \
     && python3 -m pip install semgrep
 
 # Add at least a version of rails to work with
-RUN gem install rails -v '~> 6.1.0'
+RUN gem install rails foreman
 
 RUN mkdir -p /etc/thecore/templates /etc/thecore/repos.conf.d
 COPY bin/increment_version.sh /usr/bin/increment_version.sh
