Fix create app sequence

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,7 +16,8 @@
 				"rogalmic.bash-debug",
 				"shakram02.bash-beautify",
 				"foxundermoon.shell-format",
-				"timonwong.shellcheck"
+				"timonwong.shellcheck",
+				"eamodio.gitlens"
 			],
 		}
 	},
