--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -53,6 +53,7 @@ RUN echo 'export PS1="\e[32m\u\e[0m ► \e[96m\W\e[0m [\e[31m\$(git rev-parse --
     && echo 'export COMPOSE_PROJECT_NAME=thecore_test' >> ~/.bashrc \
     && echo 'export CODEBIN=$(find $HOME/.vscode-server/bin/* -maxdepth 1 -mindepth 1 -name bin)' >> ~/.bashrc \
     && echo 'export PATH=$GEM_HOME/bin:$PATH:$APPBIN:$CODEBIN' >> ~/.bashrc \
+    && echo "mkdir -p ~/.bundle && touch ~/.bundle/config" >> ~/.bashrc \
     && echo 'sudo chown -R vscode:vscode ~' >> ~/.bashrc \
     && bundle config set path /workspaces/project/backend/vendor/bundle
 
